[package]
name = "democracy_sausage"
version = "0.1.0"
authors = ["Finn Stokes <finn.stokes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.106.0"
fps_counter = "1.0.0"
piston2d-graphics_tree = "0.28.0"
noise = "0.6.0"
rand = "0.7.3"
rand_distr = "0.2.2"
array-init = "0.1.1"
